--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,7 @@ test.json
 /test - 20000.json
 /test - 30000.json
 /test - 35000.json
+/test - 60000.json
+/test - 70000.json
+/test - 80000.json
+/test - 90000.json
