Added test file generator C# solution

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,11 @@ test.json
 /test - 80000.json
 /test - 90000.json
 test - 2.json
+VB6 Source/test - 20000.json
+VB6 Source/test - 35000.json
+VB6 Source/test - 30000.json
+VB6 Source/test - 60000.json
+VB6 Source/test - 50000.json
+VB6 Source/test - 70000.json
+VB6 Source/test - 80000.json
+VB6 Source/test - 90000.json
